--- a/scripts/RF_model_draft.Rmd
+++ b/scripts/RF_model_draft.Rmd
@@ -55,37 +55,46 @@ FOR loop:
 
 ```{r}
 
-## Function inputs: ##
-# state_vector: A vector containing the disease state for each individual in a population
-# p_transmission: The probability of transmission
+# Function 1: given state vector transform S --> I
 
-change_state <- function(state_vector, 
+change_state <- function(state_matrix,
+                         state_vector, 
                          p_transmission){
+  
+  new_state_vec <- vector(length = length(state_vector)) # A vector to store the new disease states for all individuals in the population
+  
   
   # Calculation of r, the risk of a susceptible becoming infected in a given generation
   # r depends on the probability of transmission (p_transmission) and number of infectives in the current generation (seed)
   
-  seed <- length(state_vector[state_vector == "I"]) # the number of infected individuals in the current generation
+  seed <- sum(state_vector == "I") # the number of infected individuals in the current generation
   r <- 1 - (1 - p_transmission)^seed # the probability of a susceptible individual becoming infected in a given generation
   
-  new_state_vec <- vector(length = length(state_vector)) # A vector to store the new disease states for all individuals in the population
+  # IF an individual's state is S then run simulation to determine whether the individual becomes infected by a Bernouilli Trial (binomial distribution) with probability of infection, r. 
   
-  for (i in 1:length(state_vector)) { # iterating over each individual in the population
-    
-    # IF an individual's state is S then run simulation to determine whether the individual becomes infected by a Bernouilli Trial (binomial distribution) with probability of infection, r. 
-    
-    if (state_vector[i] == "S") { 
-      new_state <- rbinom(1, 1, r) # r is the likelihood of becoming infected, size = 1 (since 1 individual is being considered), n = 1 (since 1 trial)
-      # the new_state variable codes an individual's state as 0 (if unchanged, S) and 1 (if changed, I)
-      
-    } else if (state_vector[i] == "I" | state_vector[i] == "R") { # If an individual's state is either I or R then the new state will be R
-      new_state <- 2 # the new_state variable codes an individual's state as 2, denoting R
-    
-    }
-    # Update the new_state_vec vector to contain the state of all individuals in the population in the new generation, coded as 0,1,2 for S,I,R states respectively.
-    
-    new_state_vec[i] <- new_state 
+  S <- which(state_vector == "S") # Selects index of all individuals with state S
+  
+  if(length(S)>0){ # If number of S individuals is non-zero
+    new_state_vec[S] <- rbinom(length(S), 1, r) # r is the likelihood of becoming infected, number of observations (n) = number of S state individuals, number of trials (size) = 1
   }
+  
+  # If an individual's state is I then replace with R (coded 2)
+  
+  new_state_vec[state_vector == "I" | state_vector == "R" ] <- 2
+  
+  # If an individual's state is R and has been R for >3 generations then replace with S (0)
+  
+  # Write a function which counts the number of Rs in a vector
+  R_counter <- function(x){
+    length(which(x == "R"))
+  }
+  
+  # Use the apply family to apply the R_counter function over all rows of the state_matrix
+  R_counts <- apply(state_matrix, MARGIN = 1, R_counter)
+  R2S <- which(R_counts > 3) # vector of indices for individuals which have been recovered for more than 3 generations (number 3 is arbitrary)
+  new_state_vec[R2S] <- 0
+  
+  # the new_state variable codes an individual's state as 0 (if unchanged, S) and 1 (if changed, I)
   
   # Recode the new_state_vec vector such that 0,1,2 are replaced with strings S, I, R, as in the input state_vector, for future useability (see example below)
   
@@ -115,14 +124,7 @@ init_state <- c(rep("I", length(I0)),
                 rep("S", N - length(I0))
                 ) # A vector containing the state of all individuals in the populationL: a single index case (I0) and the remaining all susceptible
 
-p_transmission <- 0.5 # 50% probability of transmission - high to check functionality!
-
-
-# Test 1, given an initial state vector, the change state function will produce a vector containing the state of all individuals in the next generation
-
-state2 <- change_state(init_state, p_transmission)
-head(cbind(init_state, state2))
-
+p_transmission <- 0.01 # 50% probability of transmission - high to check functionality!
 
 # Test 2, simulate the change in state of all individuals in the population over 20 generations, create a matrix to contain the state change.
 
@@ -132,17 +134,27 @@ state_tracker <- matrix(nrow = N, ncol = 1+generations) # a matrix to contain th
 
 state_tracker[,1] <- init_state # first col contains initial state of individuals in population
 
+states_count <- matrix(ncol = 1+generations, nrow = 3) # 1+ generations to account for first generation
+
+S_count <- length(which(init_state == "S"))
+I_count <- length(which(init_state == "I"))
+R_count <- length(which(init_state == "R"))
+
+states_count[,1] <- c(S_count, I_count, R_count)
+
 # A for loop to fill the state_tracker matrix
 for(i in 2:ncol(state_tracker)){ # iterate over each generation of individuals
   
   current_state <- state_tracker[,i-1] # update the current state vector to reflect the state in the current generation 
-  I0 <- length(current_state[current_state == "I"]) # the seed is the number of infectives in the current generation (held in current_state)
-  new_state <- change_state(current_state, p_transmission) # use the change_state function to update the state of the individuals in the population, new_state is a vector containing disease states of all individuals in the new generation
+  new_state <- change_state(state_tracker, current_state, p_transmission) # use the change_state function to update the state of the individuals in the population, new_state is a vector containing disease states of all individuals in the new generation
   state_tracker[, i] <- new_state # update the state_tracker matrix with the new_state vector for the new generation
   
-}
-
-head(state_tracker)
+  S_count <- length(which(new_state == "S"))
+  I_count <- length(which(new_state == "I"))
+  R_count <- length(which(new_state == "R"))
+  
+  states_count[, i] <- c(S_count, I_count, R_count)
+} 
 
 ```
 
